# semantic-kernel-demos

./: README.md  something.cs
LightPluginApp/: LightPluginApp.csproj
PlannerApp/: CallsPlugin.cs  PlannerApp.csproj  Program.cs  README.md  SMSPlugin.cs
assets/rag_data/: mtn_customer_complaints.txt  mtn_faq.txt  mtn_products_services.txt
chathistory/: Program.cs  chathistory.csproj
dotnet/: Makefile
dotnet/LightPluginApp/: LightPluginApp.csproj  Program.cs
dotnet/PlannerApp/: .env.example  .gitignore  FileIOPlugin.cs  PlannerApp.csproj  Program.cs
dotnet/basic-prompt/: Program.cs  run-a-prompt.csproj
dotnet/chathistory/: .gitignore  Program.cs  chathistory.csproj
dotnet/handlebars-1-shot-leanring/: Program.cs  csharp-console.csproj
dotnet/image-recognition-agent/: Program.cs  README.md  convert.sh  image-recognition-agent.csproj
dotnet/intent-investigation/: Program.cs  run-a-prompt.csproj
dotnet/multiple-input-travel-guide/: Program.cs  (+1 more)
functions-and-tools/: Program.cs  functions-and-tools.csproj
handlbars/: Program.cs
handlebars-1-shot-leanring/: csharp-console.csproj
multiple-input-travel-guide/: .gitignore  multiple-input-travel-guide.csproj
python/: README.md  main.py  pyproject.toml
python/LightPluginApp/: README.md  main.py
python/PlannerApp/: .env.example  main.py
python/basic-prompt/: README.md  main.py
python/chathistory/: main.py
python/handlebars-1-shot-learning/: main.py
python/image-recognition-agent/: main.py
python/intent-investigation/: main.py
python/multiple-input-travel-guide/: main.py
